# 201910_stapy

./: README.md  pyproject.toml
src/: greet.py  kuji.py  tenki.py
src/軽減税率/: calculate_キャッシュレス導入.py  calculate_税率は1種類.py  calculate_軽減税率導入.py
tests/: test_greet.py  test_kuji.py  test_tenki.py
tests/軽減税率/: test_calculate_キャッシュレス導入.py  test_calculate_税率は1種類.py  test_calculate_軽減税率導入.py
