[tool.poetry]
name = "201910_stapy"
version = "0.1.0"
description = ""
authors = ["Mizuki Sato <mizki.sato.0025@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
freezegun = "^0.3.12"
pytz = "^2019.2"
requests = "^2.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.730.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
